...
@Preview
@Composable
fun TeamCellPreview() {
    TeamCell(
        team = TeamEntity(
            id = "874",
            name = "Harmonia",
            tag = "HR",
            color = 5,
            logo = "/img/mkcv1_images/team_logos/yC17RqXyH5j921D7KQ6t7CWj6ISysnzV9tzgJWyf.png"
        )
    ) {

...
